# RouteLLM

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.example.yaml  docker-compose.yml  empty_config.yaml  pyproject.toml
.github/workflows/: docker-publish.yml  python-publish.yml
benchmarks/: README.md
benchmarks/mt-bench/: gpt-4_single.jsonl  martian.jsonl  unify.jsonl
docker/: Dockerfile  docker-compose.yml
docs/: minimal_walkthrough.md  routing_to_local_models.md
examples/: router_chat.py  routing_to_local_models.md
routellm/: calibrate_threshold.py  constants.py  controller.py  model_pair.py  openai_server.py
routellm/evals/: benchmarks.py  eval.py  evaluate.py  find_contaminated.py
routellm/evals/gsm8k/: generate_responses.py  gsm8k_responses.csv  train.jsonl
routellm/evals/mmlu/: contaminated_prompts.jsonl  generate_responses.py
routellm/evals/mmlu/responses/: mmlu_abstract_algebra.csv  mmlu_anatomy.csv  mmlu_astronomy.csv  mmlu_business_ethics.csv  mmlu_clinical_knowledge.csv  mmlu_college_biology.csv  mmlu_college_chemistry.csv  mmlu_college_computer_science.csv  mmlu_college_mathematics.csv  mmlu_college_medicine.csv  mmlu_college_physics.csv  mmlu_computer_security.csv  mmlu_conceptual_physics.csv  mmlu_econometrics.csv  mmlu_electrical_engineering.csv  mmlu_elementary_mathematics.csv  mmlu_formal_logic.csv  mmlu_global_facts.csv  mmlu_high_school_biology.csv  mmlu_high_school_chemistry.csv  mmlu_high_school_computer_science.csv  mmlu_high_school_european_history.csv  mmlu_high_school_geography.csv  mmlu_high_school_government_and_politics.csv  mmlu_high_school_macroeconomics.csv  mmlu_high_school_mathematics.csv  mmlu_high_school_microeconomics.csv  mmlu_high_school_physics.csv  mmlu_high_school_psychology.csv  mmlu_high_school_statistics.csv  mmlu_high_school_us_history.csv  mmlu_high_school_world_history.csv  mmlu_human_aging.csv  mmlu_human_sexuality.csv  mmlu_international_law.csv  mmlu_jurisprudence.csv  mmlu_logical_fallacies.csv  mmlu_machine_learning.csv  mmlu_management.csv  mmlu_marketing.csv  (+17 more)
routellm/evals/mt_bench/: judgements.jsonl
routellm/routers/: constants.py  routers.py
routellm/routers/causal_llm/: classifier_ft_v4.txt  classifier_ft_v5.txt  configs.py  llm_utils.py  model.py  prompt_format.py  system_ft_v4.txt  system_ft_v5.txt
routellm/routers/matrix_factorization/: model.py  train_matrix_factorization.py
routellm/routers/similarity_weighted/: generate_embeddings.py  utils.py
routellm/tests/: test_openai_client.py  test_openai_server.py
src/routellm/: calibrate_threshold.py  openai_server.py
src/routellm/evals/: evaluate.py
src/routellm/evals/gsm8k/: contaminated_prompts.jsonl  gsm8k_responses.csv
src/routellm/evals/mmlu/: domains.py
src/routellm/evals/mmlu/responses/: mmlu_astronomy.csv  mmlu_business_ethics.csv  mmlu_college_biology.csv  mmlu_college_computer_science.csv  mmlu_college_mathematics.csv  mmlu_college_medicine.csv  mmlu_college_physics.csv  mmlu_computer_security.csv  mmlu_conceptual_physics.csv  mmlu_econometrics.csv  mmlu_elementary_mathematics.csv  mmlu_formal_logic.csv  mmlu_high_school_biology.csv  mmlu_high_school_chemistry.csv  mmlu_high_school_european_history.csv  mmlu_high_school_geography.csv  mmlu_high_school_macroeconomics.csv  mmlu_high_school_mathematics.csv  mmlu_high_school_physics.csv  mmlu_high_school_psychology.csv  mmlu_high_school_statistics.csv  mmlu_high_school_us_history.csv  mmlu_human_aging.csv  mmlu_human_sexuality.csv  mmlu_jurisprudence.csv  mmlu_marketing.csv  mmlu_miscellaneous.csv  mmlu_moral_disputes.csv  mmlu_moral_scenarios.csv  mmlu_nutrition.csv  mmlu_professional_medicine.csv  mmlu_professional_psychology.csv  mmlu_public_relations.csv  mmlu_security_studies.csv  mmlu_sociology.csv  mmlu_us_foreign_policy.csv  mmlu_virology.csv  mmlu_world_religions.csv
src/routellm/evals/mt_bench/: contaminated_prompts.jsonl
src/routellm/examples/: python_sdk.md  router_chat.py  routing_to_local_models.md
src/routellm/routers/causal_llm/: llm_utils.py  prompt_format.py
